Closed Bug 382756 Opened 17 years ago Closed 17 years ago

"ASSERTION: When exactly is this supposed to be non-zero?"

Categories

(Core :: Layout, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: sharparrow1)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(2 files)

Attached file testcase
Loading the testcase triggers:

###!!! ASSERTION: When exactly is this supposed to be non-zero?: '!viewRect.x && !viewRect.y', file /Users/jruderman/trunk/mozilla/view/src/nsViewManager.cpp, line 490

This assertion was added in bug 380438.
Okay, I'll have a look at it; the reason I added it as an assertion is because I couldn't come up with any way to test the translation getting used for that case... thanks for the testcase. It's not really critical, though; the worst that could happen is corrupted painting.  I guess the situation really is rare if it took a week for someone to hit it with an irregular testcase.

To make the testcase assert cross-platform, just add an outline onto the treechildren.

It looks like we are in fact doing something wrong here, though; incremental painting leads to gaps in the outline.
Assignee: nobody → sharparrow1
Attached patch PatchSplinter Review
Attachment #270138 - Flags: review?(roc)
Checked in.
Status: NEW → RESOLVED
Closed: 17 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Crashtest checked in.
Flags: in-testsuite? → in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: