Bug 382756: ASSERTION: When exactly is this supposed to be non-zero?.  r+sr=roc.